# obewrong

./: .clangd  .pre-commit-config.yaml  CMakeLists.txt  README.md  keywords
.github/workflows/: run-tests-and-check-style.yml  run-tests-on-push.yml
docs/: grammar.ebnf  new_reference_features.md  notes.md  spec.txt
include/: CompilationUnit.h  Lexer.h  SourceManager.h
include/Error/: Error.h
include/backend/: CodegenVisitor.h  IRCompiler.h
include/error/: ParseError.h
include/frontend/: Einfo.h  Entity.h  Expression.h  Lexer.h  Parser.h  Scope.h  SourceLocation.h  SourceManager.h  Statement.h  SymbolTable.h  TypeTable.h
include/frontend/lexer/: Lexer.h
include/frontend/parser/: AST.h  Entity.h  Expression.h  Parser.h  Statement.h  SymbolTable.h  TypeTable.h  Visitor.h  Wrappers.h
include/frontend/semantic/: PrinterAst.h  SemanticAnalyzer.h  SemanticVisitor.h
include/frontend/types/: Decl.h  Generics.h  Types.h
include/util/: Logger.h
src/: main.cc
src/backend/: CodegenVisitor.cc
src/frontend/: Lexer.cc  SourceLocation.cc  SourceManager.cc  SymbolTable.cc
src/frontend/lexer/: Lexer.cc
src/frontend/parser/: Decl.cc  Entity.cc  Epxression.cc  Expression.cc  Parser.cc  Statement.cc  Type.cc
src/frontend/semantic/: PrinterAst.cc  SemanticAnalyzer.cc  SemanticVisitor.cc
src/middle/: SymbolTable.cc
src/unit/: CompilationUnit.cpp
test/: array.obw  binary_search.obw  boolean.obw  branch_global.obw  conversion.obw  counter.obw  dijkstra.obw  fibonacci.obw  foo.obw  forward_routine.obw  generics.obw  greedy_algorithm.obw  hello_world.obw  inheritance.obw  integer.obw  libc_port.obw  lists.obw  main.obw  many_methods_in_class.obw  multiple_redefinitions.obw  point.obw  pointer_try.obw  priority_queue.obw  real.obw  runner.obw  simple.obw  simple_class.obw  simple_func.obw  stack.obw  two_classes.obw  two_other_types.obw  type_mismatch.obw  while_loop.obw
test/basic/: arrays.obw  class_with_method.obw  class_with_methods_and_constructors.obw  enum.obw  for.obw  function.obw  globals.obw  if.obw  if_elif.obw  importing.obw  operators.obw  provider.obw  switch.obw  while.obw
test/constructs/: expression1.obw
test/false/parse_false/: expressions.obw  parameters.obw  statements.obw
test/grammar_v2/: full.obw
test/gtests/: TestSemanticAnalyzer.cc  TestSymbolAndTypeTables.cc
test/hard/: genereics.obw  generics.obw
test/importest/: main.obw  point.obw
test/medium/: array_of_class.obw  class_inheritance.obw  class_inheritance_super.obw  command_line.obw  conversion.obw  pointer.obw  static.obw
test/project_sample/: main.obw
test/semantic_errors/: class_with_methods.obw  if.obw  while.obw
test/std/: array.obw  integer.obw  io.obw  lists.obw  string.obw  types.obw
vim/: obewrong.vim
